2021-09-06  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, reverting r282025.
        https://bugs.webkit.org/show_bug.cgi?id=229970

        broken layout test on mac-debug-wk1

        Reverted changeset:

        "Allow layout tests to open popups by default"
        https://bugs.webkit.org/show_bug.cgi?id=229881
        https://commits.webkit.org/r282025

2021-09-06  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK] The Xvfb display server may fail to start sometimes causing tests to randomly crash
        https://bugs.webkit.org/show_bug.cgi?id=229758

        Reviewed by Philippe Normand.

        Add a new function in XvfbDriver() to ensure that the display server
        at a given display_id is replying as expected. Ask it for the screen
        size at monitor 0 and compare the result with the one we expect to
        have inside Xvfb. For doing this check a external python program is
        called which does the query using GTK. Using a external program is
        more robust against possible failures calling into GTK and also will
        allow re-using this program also to check that the weston server is
        also replying as expected for the weston driver (on a future patch).

        If the Xvfb driver is not replying as expected then restart it and
        try again, up to 3 retries.

        Use this also on the weston driver to check that the Xvfb driver is
        ready.

        The code is both compatible with python2 and python3, when running on
        python2 it will try first to use subprocess32 if available, otherwise
        will use standard python2 subprocess without using the timeout feature.

        * Scripts/webkitpy/common/system/executive_mock.py:
        (MockProcess.__init__):
        (MockProcess.communicate):
        * Scripts/webkitpy/port/westondriver.py:
        (WestonDriver._setup_environ_for_test):
        * Scripts/webkitpy/port/westondriver_unittest.py: