@@ -1,3 +1,15 @@
+2021-09-06  Aakash Jain  <aakash_jain@apple.com>
+
+        [ews] Invoke transfer-archive-to-s3 with Python 3
+        https://bugs.webkit.org/show_bug.cgi?id=229972
+
+        Reviewed by Alexey Proskuryakov.
+
+        * CISupport/ews-build/steps.py:
+        (TransferToS3): Invoke with python 3.
+        * CISupport/ews-build/steps_unittest.py: Updated unit-tests.
+        * CISupport/Shared/transfer-archive-to-s3: Changed shebang to python 3.
+
 2021-09-06  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, reverting r282025.
